syntax = "proto3";

package ecommerce;
// option go_package = "bistream/proto";
option go_package = "https://github.com/ecommerce";

// -----------------Cart service-----------------

service CartService {
  rpc AddItem(AddItemRequest) returns (Empty) {}
  rpc GetCart(GetCartRequest) returns (Cart) {}
  rpc EmptyCart(EmptyCartRequest) returns (Empty) {}
}

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message AddItemRequest {
  string user_id = 1;
  CartItem item = 2;
}

message EmptyCartRequest { string user_id = 1; }

message GetCartRequest { string user_id = 1; }

message Cart {
  string user_id = 1;
  repeated CartItem items = 2;
}

message Empty {}

// -----------------Product service-----------------

service ProductService {
  rpc ListProducts(Empty) returns (ListProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (Product) {}
  // rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (Product) {}
  rpc DeleteProduct(DeleteProductRequest) returns (Empty) {}  
  rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string picture = 3;
  float price = 4;
  int32 stock = 5;
  // repeated string categories = 6;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  int32 stock = 6;
  // repeated string categories = 7;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;
  int32 stock = 6;

  // Categories such as "clothing" or "kitchen" that can be used to look up
  // other related products.
  //   repeated string categories = 6;
}

message DeleteProductRequest { string id = 1; }

message ListProductsResponse { repeated Product products = 1; }

message GetProductRequest { string id = 1; }

// message SearchProductsRequest { string query = 1; }

// message SearchProductsResponse { repeated Product results = 1; }
